--- a/.gitignore
+++ b/.gitignore
@@ -384,3 +384,7 @@ Hyphen/thirdparty/glm/out/build/x64-Debug (default)/CMakeFiles/ShowIncludes/
 Hyphen/thirdparty/glm/out/build/x64-Debug (default)/CMakeFiles/
 
 Hyphen/thirdparty/glm/out/build/x64-Debug (default)/
+
+*.cpp~Updated upstream
+
+*.cpp~Stashed changes
