Modified the buffer logic. The scenes get rendered offscreen now and are drawn over a quad as a texture. Added lighting functionality in shader. Modified some of the GUI components to better suit their functionality. Fixed camera rotation on window resize. Added preview option for each scene camera.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -3,33 +3,48 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Dev Env]
-Pos=0,0
-Size=101,350
-Collapsed=0
-
-[Window][Scene0]
-Pos=1023,12
-Size=161,350
-Collapsed=0
-
 [Window][Scenes]
-Pos=1069,400
-Size=101,210
-Collapsed=0
-
-[Window][Scene1]
-Pos=1033,14
-Size=161,350
-Collapsed=0
-
-[Window][Scene2]
-Pos=990,34
-Size=161,350
+Pos=949,409
+Size=111,240
 Collapsed=0
 
 [Window][Miscs]
-Pos=0,420
-Size=101,210
+Pos=0,480
+Size=111,240
+Collapsed=0
+
+[Window][Scene0]
+Pos=881,14
+Size=177,400
+Collapsed=0
+
+[Window][Dev Env]
+Pos=0,0
+Size=111,400
+Collapsed=0
+
+[Window][Camera00 Preview]
+Pos=143,416
+Size=216,235
+Collapsed=0
+
+[Window][MainCamera Preview]
+Pos=399,442
+Size=216,235
+Collapsed=0
+
+[Window][Camera02 Preview]
+Pos=173,486
+Size=216,235
+Collapsed=0
+
+[Window][Scene1]
+Pos=1045,15
+Size=163,350
+Collapsed=0
+
+[Window][Camera13 Preview]
+Pos=299,486
+Size=216,235
 Collapsed=0
 
